--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
     /* Responsive Design */
     @media screen and (min-width:300px) and (max-width:700px){
  body{
-    background-image: url("images/bg-pattern-top.svg"), url("images/bg-pattern-bottom.svg");
+    background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
     background-repeat: no-repeat, no-repeat;
     background-position: left -710px bottom 50px, right -720px top 310px ;
  } 
- .card1{
+ .container {
     top: 150px;
  }  
 }
