--- a/index.html
+++ b/index.html
@@ -112,16 +112,62 @@
     }
 
     /* Responsive Design */
-    @media screen and (min-width:300px) and (max-width:700px){
- body{
-    background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
-    background-repeat: no-repeat, no-repeat;
-    background-position: left -710px bottom 50px, right -720px top 310px ;
- } 
- .container {
-    top: 150px;
- }  
-}
+    @media (max-width: 700px) and (min-width: 300px) {
+    body {
+      background-color: #14697c; /* Optional: Change the background color for smaller screens */
+    }
+
+    #con {
+      grid-template-columns: 1fr; /* Adjust grid layout for single-column display */
+      padding: 20px;
+    }
+
+    .container {
+      width: 90%; /* Make the card width adapt to smaller screens */
+      height: auto; /* Adjust height dynamically */
+      margin-top: 100px; /* Reduce margin for better fit */
+    }
+
+    #pic {
+      top: -50px; /* Adjust the profile picture position */
+      left: calc(50% - 60px); /* Center the profile picture */
+    }
+
+    #card-top {
+      top: -320px; /* Adjust background image position */
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+
+    #card-bottom {
+      top: 120px; /* Adjust bottom background image position */
+      right: 0;
+      left: 0;
+      margin: auto;
+    }
+
+    #con-1 {
+      padding-top: 40px; /* Adjust padding for better spacing */
+    }
+
+    #con-2 {
+      grid-template-columns: 1fr 1fr 1fr; /* Ensure content aligns well */
+      padding-top: 20px;
+    }
+
+    .text-1 {
+      font-size: 16px; /* Reduce font size for smaller screens */
+    }
+
+    .text-2 {
+      font-size: 10px; /* Adjust secondary text size */
+    }
+
+    .attribution {
+      top: -300px; /* Adjust attribution position */
+    }
+  }
   </style>
 </head>
 
