--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-
   <title>Frontend Mentor | Profile card component</title>
+
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Parkinsans:wght@300..800&display=swap');
+  </style>
+
 </head>
-
 <body>
-  <div class="card">
-    <div class="card1">
-      <img src="./images/bg-pattern-card.svg" alt="">
-      <div class="card2">
-        <img src="./images/image-victor.jpg" alt="">
-        <h2>Victor Crest <span>26</span></h2>
-        <p>London</p>
-        <div class="line"></div>
-        <div class="footer">
-          <p class="num">80K</p>
-          <p>Followers</p>
-        </div>
-        <div class="footer">
-          <p class="num"> 803K</p>
-          <p>Likes</p>
-        </div>
-        <div class="footer">
-          <p class="num"> 1.4K</p>
-          <p>Photos</p>
-        </div>
-      </div>
-    </div>
+<header>
+  <nav>
+  <div class="top">
+     <svg  width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="rotate(-135 489 489)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".5"/></svg>
   </div>
-  <footer class="attribution">
+</nav>
+</header>
+ 
+<main>
+  <div class="box">
+        <div class="box1">
+              <img class="victorimg" src="images/image-victor.jpg" alt="victorimg">
+              <p class="name"><span id="txt1">Victor Crest</span><span id="txt2">26</span><br><span id="txt3">London</span></p>
+              <div class="box2">
+                <div class="details">
+                 <div class="one">80K</div>
+                 <div class="two">803K</div>
+                 <div class="three">1.4K</div>
+                 <div class="four">Followers</div>
+                 <div class="five">Likes</div>
+                 <div class="six">Photos</div>
+                 </div>
+              </div>
+        </div>
+  </div>
+</main>
+<div class="bottom">
+  <svg width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="b"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="scale(1 -1) rotate(45 1669.55 0)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".25"/></svg>
+</div>
 
-    <div>
-      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by<a href="#"> Boopalan E</a></p>
-    </div>
 
-  </footer>
+  
+<footer  class="attribution">
+ 
+  <div>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by<a href="#"> Boopalan E</a></p>
+  </div>
+  
+</footer>
 </body>
-
 </html>
